--- a/src/app/market/market.component.html
+++ b/src/app/market/market.component.html
@@ -1,9 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <li class="list-group-item">
-        <span class="badge">Photo</span>
-        <button class="btn btn-success">Add to Collection</button>&nbsp;
+      <li class="list-group-item" *ngFor="let item of collectibles">
+        <span class="badge">{{ item.type }}</span>
+        <button class="btn btn-success" (click)="onAddToCollection()">Add to Collection</button>&nbsp;
+        {{ item.description }}
         Anything
       </li>
     </ul>
